removing fixed background on small screen

--- a/less/app.less
+++ b/less/app.less
@@ -125,6 +125,7 @@ color: #fff;
 		h1 {
 	        text-transform: uppercase;
 	        .text-shadow(5px 2px 2px rgba(0,0,0,0.7));
+	        .opacity(.7);
 	        margin: 0 auto;
 	        line-height: 1.3;
 	        max-width: 600px;
@@ -196,9 +197,11 @@ color: #fff;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: url('@{img-root}/wolves/INTRO01x_1400.jpg') no-repeat top left fixed;
+		background: url('@{img-root}/wolves/INTRO01x_1400.jpg') no-repeat top left;
 		.background-size(cover);
-		//.animation-delay(1s);
+		@media @screen-small-above { 
+			background: url('@{img-root}/wolves/INTRO01x_1400.jpg') no-repeat top left fixed;
+		}
 	}
 	
 	ul {
